# smart-forms

./: .gitignore  OpenAPI.yaml  README.md  backend.yaml  database.yaml  docker-compose.yml  requirements.txt
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/API/: main.py  test_main.py
backend/database/: initialize.py
backend/migrations/: env.py
backend/migrations/versions/: 21a63d64113e_add_owner.py  79022452b457_initial_attempt_2.py  b149899a11bc_initial_attempt.py
backend/models/: machine.py  machineTable.py
frontend/: Dockerfile  README.md  package-lock.json  package.json
frontend/src/: DataTable.tsx  SmartFormComponent.tsx  config.ts  main.tsx  utils.ts
helm/smart-forms/: Chart.yaml  smart-forms-0.1.0.tgz  values.yaml
helm/smart-forms/templates/: NOTES.txt  _helpers.tpl  backend.yaml  database.yaml  frontend.yaml
helm/smart-forms/templates/tests/: test-connection.yaml
minikube/: frontend.yaml
