[tool.poetry]
name = "backend"
version = "0.1.0"
description = "API for CRUD operations on a database"
authors = ["bsniegowski <sniegowski.beniamin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "1.12.0"
annotated-types = "0.5.0"
anyio = "3.7.1"
b = "1.0.0"
certifi = "2023.5.7"
click = "8.1.5"
dnspython = "2.4.0"
email-validator = "2.0.0.post2"
environs = "9.5.0"
exceptiongroup = "1.1.2"
fastapi = "0.100.0"
fastapi-cors = "0.0.6"
greenlet = "2.0.2"
h11 = "0.14.0"
httpcore = "0.17.3"
httpx = "0.24.1"
idna = "3.4"
iniconfig = "2.0.0"
jsonref = "1.1.0"
mako = "1.2.4"
markupsafe = "2.1.3"
marshmallow = "3.19.0"
packaging = "23.1"
pluggy = "1.3.0"
psycopg2 = "2.9.9"
pydantic = "1.10.11"
pydantic-core = "2.3.0"
pytest = "7.4.1"
python-dotenv = "1.0.0"
sniffio = "1.3.0"
sqlalchemy = "1.4.41"
sqlalchemy2-stubs = "0.0.2a35"
sqlmodel = "0.0.8"
starlette = "0.27.0"
tomli = "2.0.1"
typing-extensions = "4.7.1"
uvicorn = "0.23.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
